# sacument-assignment

./: README.md
sacumen/: main.py  pyproject.toml
sacumen/resource/: example.cfg  example.yaml  out.env  out.json  sample.conf
sacumen/src/sacumen_assignment/: readingCfgFile.py  readingConfFile.py  readingYamlFile.py  setEnvVar.py
sacumen/src/sacumen_assignment.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sacumen/tests/: test_all.py
